[main] rota de pedidos com busca por nome client
